[package]
name = "mdbook-mathpunc"
authors = ["Yannick Seurin"]
version = "0.1.0"
edition = "2021"
description = "An mdbook preprocessor that prevents line breaks between inline math blocks and punctuation marks."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yannickseurin/mdbook-mathpunc"
repository = "https://github.com/yannickseurin/mdbook-mathpunc"
keywords = ["mdbook", "preprocessor", "katex", "punctuation"]

[dependencies]
clap = "4.4.6"
fancy-regex = "0.11.0"
mdbook = "0.4.35"
semver = "1.0.20"
serde_json = "1.0.107"
